2016-10-29  Eric Herman <eric@freesa.org>

	extract "eh_vprintf_ctx" from "eh_vsnprintf" for use in
	a "eh_vprintf" function.

	* src/eh-printf.c: create a buffer context object, and use it
	* misc/pre-tidy.patch: respin the pre-tidy patch

2016-10-28  Eric Herman <eric@freesa.org>

	Stub-out what I imagine we will need for actual printf,
	write a simple linux implementation

	* src/eh-printf.h: add function stubs to write output
	* src/eh-printf-linux.c: implement functions to write to STDOUT
	* tests/test-linux-write.c: test the linux implementations
	* Makefile.am: include test-linux-write (gnu/linux specific)
	* .gitignore: test-linux-write

2016-10-27  Eric Herman <eric@freesa.org>

	Use CHAR_BIT rather than define bytes to be 8 bits
	Allow the definition of EH_CHAR_BIT to avoid #include <limits.h>
	use EH_CHAR_BIT in EH_LONG_BASE2_ASCII_BUF_SIZE

	* src/eh-printf.c: define and use EH_CHAR_BIT

2016-10-20  Eric Herman <eric@freesa.org>

	extract string functions into separate header, sources

	* src/eh-string.h: declare eh_strlen, eh_strncpyl prototypes
	* src/eh-printf.c: moved the string functions to eh-string
	* src/eh-string.c: extracted string functions from eh-printf
	* Makefile.am: include the new headers, sources
	* misc/pre-tidy.patch: include tidy for eh-string.h

2016-10-19  Eric Herman <eric@freesa.org>

	reset the zero_padding and field_size after printing,
	be more robust about the unhandled case.

	* src/eh-printf.c: the reset, more robustness for unhandled
	* tests/test-pct5d.c: test the reset

2016-10-18  Eric Herman <eric@freesa.org>

	add support for "%s" and "%4s"

	* tests/test-str.c: add the test
	* src/eh-printf.c: add code to support "%s"
	* Makefile.am: add the test, quiet valgrind if no error
	* .gitignore: ignore the test


2016-10-17  Eric Herman <eric@freesa.org>

	inline "check_str" from libecheck

	https://github.com/ericherman/libecheck

	* tests/eh-printf-tests.h: copy-paste-tweak check_str